[project]
name = "blogstack"
version = "0.1.0"
description = ""
authors = [
    {name = "ochamekan"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.fastapi]
entrypoint = "src.main:app"
